New readme. Fixed errors in logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     
-    <title>Document</title>
+    <title>Maze / Dungeon generator</title>
 </head>
 <body>
     <div class="gameField" id="gameField"></div>
